namespace ProjectGenesis.Constants
{
    public static class Constants
    {
        public static class Animations
        {
            public static class PlayerAnimations
            {
                public const string Horizontal = "horizontal";
                public const string Jump = "jump";
                public const string Falling = "falling";
            }
        }

        public static class Pools
        {
            public const string FallingTraps = "FallingTrapsPool";
            public const string BulletTraps = "BulletTrapsPool";
        }
    }
}